# portfolio

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.rst  docker-compose.override.yml  docker-compose.stack.yml  docker-compose.yml  requirements.txt  setup.cfg
shop/: admin.py  forms.py  models.py  services.py  setup.cfg  signals.py  tests.py  urls.py  views.py
shop/fixtures/: example_shop_data.json
shop/migrations/: 0001_initial.py  0043_auto_20210713_1851.py  0044_alter_specification_image.py  0045_auto_20210727_2038.py  0046_cart_user_item_unique.py  0047_auto_20210728_2105.py  0048_auto_20210803_1632.py  0049_rename_cart_cartitem.py  0050_auto_20210807_1346.py  0051_auto_20210826_1942.py  0052_auto_20210827_1505.py  0053_auto_20210827_1703.py  0054_auto_20210901_1857.py  0055_auto_20210912_1534.py  0056_auto_20210912_1543.py  0057_shippingaddress_by_default.py  0058_shippingaddress_unique_default_address.py  0059_alter_order_status.py
shop/static/shop/: modal_order.js  script_jquery.js  style.css
shop/templates/registration/: login.html  sign_up.html
shop/templates/shop/: base.html  cart.html  home.html  order_detail.html  order_list.html  order_placed.html  personal_info.html  profile.html  rating_list.html  search.html  specs_by_category.html
shop/templates/shop/includes/: cart_form.html  cart_form_detail.html  cart_form_list.html  login.html  modal_login.html  modal_order.html  pagination.html  (+4 more)
shop/templatetags/: cart_form.py  decimal_normalize.py  verbose_names.py
shop/tests/: test_models.py  test_views.py
(+68 files in other folders)
