[metadata]
name = shop
version = 0.7.9
author = Maksim Reshetnik
author_email = mareshetnik@gmail.com
description = A Django app for an online store.
long_description = file: README.rst
license = BSD-3-Clause
url = http://github.com/maxreshetnik/shop
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
